added css for header and mods to js and html.

--- a/sales.html
+++ b/sales.html
@@ -4,8 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <title>International Daily Sales</title>
+</head>    <head>
+  <meta charset="UTF-8">
+  <title>Cookie Stand</title>
+ <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body><main>
+<body>
+  <div class="header">
+      <div class="innerHeader">
+        <div class="logoContainer">
+        <h1>Salmon<span>Cookies</span></h1>
+      </div>
+      <ul class="navigation">
+        <a><li>Seattle</li></a>
+        <a><li>Tokyo</li></a>
+        <a><li>Dubai</li></a>
+        <a><li>Paris</li></a>
+        <a><li>Lima</li></a>
+      </ul>
+    </div>
+  </div>
+<main>
   <h2>Seattle Sales</h2>
 <ul id="seattle">
 
